[package]
name = "itermacros"
version = "0.1.0"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["macro", "iterator", "macro_rules", "unpack"]
description = "Some useful macros related to iterators."

license = "MIT"
repository = "https://github.com/A4-Tacks/itermacros-rs"
homepage = "https://github.com/A4-Tacks/itermacros-rs"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
